--- a/css/style.css
+++ b/css/style.css
@@ -26,3 +26,10 @@ table {
   background: linear-gradient(90deg, #000 0%, lightgrey 100%);
   box-shadow: 5px 5px 10px 1px rgba(0, 0, 0, 0.6); */
 }
+
+.btnSmiley {
+  width: 40px;
+  height: 40px;
+  font-size: 22px;
+  margin: 20px;
+}
