--- a/css/style.css
+++ b/css/style.css
@@ -43,3 +43,17 @@ table {
   padding: 6px;
   border-radius: 6px;
 }
+
+.hints button {
+  margin: 6px;
+  width: 40px;
+  height: 40px;
+  border: 2px solid gray;
+  border-radius: 50%;
+  font-size: 22px;
+  background-color: yellow;
+}
+
+.hints .available {
+  background-color: lightgray;
+}
