--- a/css/style.css
+++ b/css/style.css
@@ -57,3 +57,12 @@ table {
 .hints .available {
   background-color: lightgray;
 }
+
+.mega-hint {
+  font-size: 16px;
+  background-color: deepskyblue;
+  border-radius: 10px;
+  width: 150px;
+  padding: 12px;
+  margin: 12px;
+}
